--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -92,7 +92,7 @@ h2 {
 	}
 	&__box {
 		padding: 4rem 2rem;
-		margin: 3rem auto;
+		margin: 2rem auto;
 		position: relative;
 		background-color: $section1-color;
 
@@ -108,6 +108,7 @@ h2 {
 		&-img > img {
 			object-fit: cover;
 			width: 60%;
+			max-width: 200px;
 		}
 	}
 }
@@ -181,7 +182,10 @@ h2 {
 	align-items: center;
 
 	&__boxes {
+		display: flex;
+		flex-wrap: wrap;
 		padding: 3rem 1rem;
+		justify-content: center;
 
 		&-img {
 			display: flex;
@@ -204,12 +208,13 @@ h2 {
 	&__form {
 		display: grid;
 		grid-template-columns: repeat(6, 1fr);
+		padding: 4rem 0;
 	}
 	&__form-box {
 		label {
 			display: block;
 			margin-bottom: 0.5rem;
-			font-size: 2rem;
+			font-size: 1.5rem;
 		}
 
 		textarea {
@@ -221,7 +226,7 @@ h2 {
 		input,
 		textarea {
 			padding: 1rem 1rem;
-			margin-bottom: 2em;
+			margin-bottom: 1em;
 			width: 100%;
 			background: none;
 			color: #fff;
@@ -252,7 +257,7 @@ h2 {
 		padding: 2rem 8rem;
 		border: 1px solid rgb(255, 255, 255);
 		background: none;
-		font-size: 2rem;
+		font-size: 1.5rem;
 		font-weight: bold;
 		color: rgb(250, 248, 248);
 		cursor: pointer;
@@ -297,4 +302,125 @@ h2 {
 // ==================
 
 @media (min-width: 576px) {
+	.aboutus {
+		h2 {
+			font-size: 4rem;
+		}
+		&__boxes {
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+		}
+		&__box {
+			max-width: 48%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+
+			&-img {
+				height: 30%;
+				margin-bottom: 3rem;
+
+				img {
+					max-height: 100%;
+					width: auto;
+					object-fit: cover;
+				}
+			}
+		}
+	}
+
+	.numbers__box {
+		justify-content: space-evenly;
+
+		&-item {
+			width: 45%;
+			font-size: 2rem;
+		}
+	}
+
+	.portofolio {
+		margin: 4rem 4rem;
+	}
+
+	h2 {
+		font-size: 4rem;
+	}
+
+	.technology__boxes {
+		flex-direction: row;
+
+		&-img {
+			width: 45%;
+		}
+	}
+
+	.contact {
+		h2 {
+			font-size: 4rem;
+		}
+		&__form-box {
+			label {
+				font-size: 2.5rem;
+				margin-bottom: 1rem;
+			}
+		}
+
+		&__form-btn {
+			grid-column: 1/4;
+			font-size: 2.5rem;
+		}
+	}
+}
+@media (min-width: 768px) {
+	.header {
+		&__welcome {
+			font-size: 7rem;
+		}
+		&__text {
+			font-size: 3rem;
+		}
+		&__scroll {
+			font-size: 2rem;
+		}
+	}
+
+	.carousel {
+		display: flex;
+		max-height: 700px;
+		&-item {
+			height: 700px;
+		}
+	}
+}
+@media (min-width: 992px) {
+	.aboutus {
+		&__box {
+			&-img {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				height: 80%;
+			}
+
+			&-img > img {
+				width: 100%;
+				max-width: 280px;
+			}
+		}
+	}
+	.numbers__box-item {
+		font-size: 2.5rem;
+	}
+	.technology__boxes {
+
+		&-img {
+			width: 30%;
+		}
+	}
+}
+@media (min-width: 1200px) {
+}
+
+@media (min-width: 1400px) {
 }
